<resources>
    <string name="app_name">My Application</string>
    <string name="glasses">Glasses</string>
    <string name="hat">Hat</string>
    <string name="eyebrows">Eyebrows</string>
    <string name="nose">Nose</string>
    <string name="mustache">Mustache</string>
    <string name="arms">Arms</string>
    <string name="eyes">Eyes</string>
    <string name="mouth">Mouth</string>
    <string name="ears">Ears</string>
    <string name="shoes">Shoes</string>
    <string name="body_image">body_img</string>
    <string name="arms_image">arms_img</string>
    <string name="ears_image">ears_img</string>
    <string name="eyebrows_image">eyebrows_img</string>
    <string name="eyes_image">eyes_img</string>
    <string name="hat_image">hat_img</string>
    <string name="mouth_image">mouth_img</string>
    <string name="mustache_image">mustache_img</string>
    <string name="nose_image">nose_img</string>
    <string name="shoes_image">shoes_img</string>
    <string name="glasses_image">glasses_img</string>
</resources>
