<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:srcCompat="@drawable/body" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:srcCompat="@drawable/arms" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:srcCompat="@drawable/ears" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:srcCompat="@drawable/eyebrows" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:srcCompat="@drawable/eyebrows" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:srcCompat="@drawable/eyes" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:srcCompat="@drawable/glasses" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:srcCompat="@drawable/hat" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:srcCompat="@drawable/mouth" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:srcCompat="@drawable/mustache" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:srcCompat="@drawable/nose" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:srcCompat="@drawable/shoes" />
    </FrameLayout>

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:padding="z"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:text="@string/hat" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:text="@string/eyebrows"
            app:layout_column="0"
            app:layout_row="1" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:text="@string/nose"
            app:layout_column="0"
            app:layout_row="2" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:text="@string/mustache"
            app:layout_column="0"
            app:layout_row="3" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:text="@string/arms"
            app:layout_column="0"
            app:layout_row="4" />

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:text="@string/eyes"
            app:layout_column="1"
            app:layout_row="0" />

        <CheckBox
            android:id="@+id/checkBox7"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:text="@string/glasses"
            app:layout_column="1"
            app:layout_row="1" />

        <CheckBox
            android:id="@+id/checkBox8"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:text="@string/mouth"
            app:layout_column="1"
            app:layout_row="2" />

        <CheckBox
            android:id="@+id/checkBox9"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:text="@string/ears"
            app:layout_column="1"
            app:layout_row="3" />

        <CheckBox
            android:id="@+id/checkBox10"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:text="@string/shoes"
            app:layout_column="1"
            app:layout_row="4" />
    </android.support.v7.widget.GridLayout>
</android.support.constraint.ConstraintLayout>